# codex-memory

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: AGENTS.memory-block.md  config-snippet.toml  seed-example.sh  seed-kineticflow.sh
src/codex_memory/: cli.py  embeddings.py  hooks.py  mcp_server.py  store.py
src/codex_memory.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: test_codex_memory.py
