[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-memory"
version = "0.1.0"
description = "Local SQLite memory MCP server for Codex"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Local" }]
dependencies = []

[project.scripts]
codex-memory = "codex_memory.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
