[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-memory"
version = "0.1.0"
description = "Local SQLite memory MCP server for Codex"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "ghostarc249" }]
dependencies = []

[project.urls]
Homepage = "https://github.com/ghostarc249/codex-memory"
Repository = "https://github.com/ghostarc249/codex-memory"
Issues = "https://github.com/ghostarc249/codex-memory/issues"

[project.scripts]
codex-memory = "codex_memory.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
